new usage analysis pages added

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     body {
       height: 100%;
+      background-color: white !important;
     }
 
     div#root {
@@ -36,7 +37,6 @@
 
     div.app {
       height: 100%;
-      background-color: cornsilk;
     }
   </style>
 </head>
