--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
             type="text/javascript"
             src="https://test-api.paymentiq.io/paymentiq/api/viq/jscardencrypter/100000999"
         ></script>
+ 
     </head>
 
     <body>
@@ -59,5 +60,10 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+    <script language="javascript"
+    src="../src/letou/components/iovation/config.js"></script>
+    <script language="javascript"
+    src="../src/letou/components/iovation/iovation.js"></script>
+</body>
 </html>
