--- a/public/index.html
+++ b/public/index.html
@@ -60,10 +60,15 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-    <script language="javascript"
-    src="../src/letou/components/iovation/config.js"></script>
-    <script language="javascript"
-    src="../src/letou/components/iovation/iovation.js"></script>
-</body>
+        -->
+        <!-- <script language="javascript"
+        src="../src/letou/components/iovation/config.js"></script>
+        <script language="javascript"
+        src="../src/letou/components/iovation/iovation.js"></script> -->
+        <script  type="text/javascript">
+        </script>
+        <script src = "config.js" type="text/javascript"></script>
+        <script  src= "iovation.js" type="text/javascript" ></script>
+            
+    </body>
 </html>
