--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
                 height: 100%;
             }
         </style>
+        <base href="/" />
         <script
             type="text/javascript"
             src="https://test-api.paymentiq.io/paymentiq/api/viq/jscardencrypter/100000999"
