--- a/public/index.html
+++ b/public/index.html
@@ -25,20 +25,20 @@
         <title>iBet.com</title>
         <style>
             html {
-                height: 100%;
+                min-height: 100%;
             }
 
             body {
-                height: 100%;
+                min-height: 100%;
                 background-color: white !important;
             }
 
             div#root {
-                height: 100%;
+                min-height: 100%;
             }
 
             div.app {
-                height: 100%;
+                min-height: 100%;
             }
         </style>
         <base href="/" />
