--- a/public/index.html
+++ b/public/index.html
@@ -66,9 +66,8 @@
         <script  type="text/javascript"></script>
         <script src = "config.js" type="text/javascript"></script>
         <script src= "iovation.js" type="text/javascript" ></script>
-        <!-- <script type="text/javascript" src="http://cache.download.banner.winforfun88.com/integrationjs.php"></script> -->
         <script type="text/javascript" src="https://login.fourblessings88.com/jswrapper/integration.js.php?casino=fourblessings88"></script>
-        <script src = "pt_test/integration/integrationRedirect.html"></script>
+        <!-- <script src = "pt_test/integration/integrationRedirect.html"></script> -->
 
             <!-- // iapiSetCallout('Login', calloutLogin);
             
