Update title to letou
actually we should not hard code this.

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>iBet.com</title>
+        <title>乐投 Letou | 国际米兰足球俱乐部 官方合作伙伴 - Letou</title>
         <style>
             html {
                 min-height: 100%;
