--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         -->
         
         <script  type="text/javascript"></script>
-        <script src="pt_test/integration/integrationRedirect.html"></script>
+        <!-- <script src="pt_test/integration/integrationRedirect.html"></script> -->
         <script src = "config.js" type="text/javascript"></script>
         <script src= "iovation.js" type="text/javascript" ></script>
         <script type="text/javascript" src="https://login.fourblessings88.com/jswrapper/integration.js.php?casino=fourblessings88"></script>
