--- a/public/pt_test/integration/integrationRedirect.html
+++ b/public/pt_test/integration/integrationRedirect.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!-- <script type="text/javascript" src="http://cache.download.banner.winforfun88.com/integrationjs.php"></script> -->
+<script type="text/javascript" src="https://login.fourblessings88.com/jswrapper/integration.js.php?casino=fourblessings88"></script>
 <script type="text/javascript">
 // get the current hash
 var loc = window.location.toString();
