--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <!-- <link rel="import" href="/public/pt_test/integration/integrationRedirect.html"> -->
+        <link rel="pt" href="%PUBLIC_URL%/pt_test/integration/integrationRedirect.html">
+       
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
