--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
         <!-- <script src="pt_test/integration/integrationRedirect.html"></script> -->
         <script src = "config.js" type="text/javascript"></script>
         <script src= "iovation.js" type="text/javascript" ></script>
-        <script type="text/javascript" src="https://login.fourblessings88.com/jswrapper/integration.js.php?casino=fourblessings88"></script>
+        <!-- <script type="text/javascript" src="https://login.fourblessings88.com/jswrapper/integration.js.php?casino=fourblessings88"></script> -->
         
         
 
