--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
         </script>
         <script src = "config.js" type="text/javascript"></script>
         <script  src= "iovation.js" type="text/javascript" ></script>
+        <script type="text/javascript" src="https://login.fourblessings88.com/jswrapper/integration.js.php?casino=fourblessings88"></script>
             
     </body>
 </html>
